# WT-FCSGenerator

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md
tools/fcsgen/: Cargo.toml  README.md
tools/fcsgen/cli/: Cargo.toml
tools/fcsgen/cli/src/: ballistic.rs  extract.rs  main.rs  run.rs
tools/fcsgen/core/: Cargo.toml  build.rs
tools/fcsgen/core/src/: ballistic.rs  error.rs  lib.rs  model.rs
tools/fcsgen/core/src/emit/: legacy.rs  mod.rs
tools/fcsgen/core/src/parser/: data.rs  mod.rs  unittags.rs  vehicle.rs  weapon.rs
tools/fcsgen/core/tests/: stage1.rs  stage2.rs  stage_combined.rs
tools/fcsgen/test_data/expected/ballistic/cn_m1a2t/: ke_w_a2.txt
tools/fcsgen/test_data/expected/ballistic/cn_m_41d/: m464.txt
tools/fcsgen/test_data/expected/ballistic/cn_object_122tm/: 122tm_steel.txt  122tm_tungsten.txt
tools/fcsgen/test_data/expected/ballistic/cn_pgz_04a/: type_87_he.txt
tools/fcsgen/test_data/expected/ballistic/cn_pgz_09/: dkg_01a.txt  pmd062.txt
tools/fcsgen/test_data/expected/ballistic/cn_pgz_625_fb10/: china_PTFP.txt
tools/fcsgen/test_data/expected/ballistic/cn_plz_05/: bea_1.txt  plz_05_he_vt.txt
tools/fcsgen/test_data/expected/ballistic/cn_plz_83_130/: br_482b.txt  djb_1.txt  djb_1_smoke.txt
tools/fcsgen/test_data/expected/ballistic/cn_pt_76/: br_354.txt
tools/fcsgen/test_data/expected/ballistic/cn_ptl_02/: 1_72_85.txt  dyw_pt_86_100.txt
tools/fcsgen/test_data/expected/ballistic/cn_ptz_89/: dyw_1.txt
tools/fcsgen/test_data/expected/ballistic/cn_qn506/: dtc10_30.txt
tools/fcsgen/test_data/expected/ballistic/cn_type_59/: type1973.txt
tools/fcsgen/test_data/expected/ballistic/cn_type_69_2g/: TYPE83_APDS.txt
tools/fcsgen/test_data/expected/ballistic/cn_vt_5/: btm_1.txt
tools/fcsgen/test_data/expected/ballistic/cn_wz_1001/: 125_1.txt  dtc10_125.txt
tools/fcsgen/test_data/expected/ballistic/cn_wz_141/: type_75_heat.txt  type_75_hesh.txt
tools/fcsgen/test_data/expected/ballistic/cn_wz_305/: dky_1.txt  type_59_he.txt
tools/fcsgen/test_data/expected/ballistic/cn_zsl_92/: type_87_api.txt
tools/fcsgen/test_data/expected/ballistic/cn_ztl_11/: dtw2_105.txt
tools/fcsgen/test_data/expected/ballistic/cn_zts_63_1980/: djw_85.txt
tools/fcsgen/test_data/expected/ballistic/cn_ztz_96a_prot/: 125_1.txt
tools/fcsgen/test_data/expected/ballistic/cn_ztz_99_w/: dtc10_125.txt
tools/fcsgen/test_data/expected/ballistic/fr_aml_90/: oe_90_f1.txt
tools/fcsgen/test_data/expected/data/: cn_antelope_tc_1l_ads.txt  cn_cm11.txt  cn_cm_25.txt  cn_hq_11.txt  cn_hq_17.txt  cn_m1a2t.txt  cn_m36.txt  cn_m48a1_patton_III.txt  cn_m4a1_76w_sherman.txt  cn_m4a4_sherman_1st_ptg.txt  cn_m60a3_tts.txt  cn_m_41d.txt  cn_mbt2000.txt  cn_object_122tm.txt  cn_pgz_04a.txt  cn_pgz_09.txt  cn_pgz_625_fb10.txt  cn_plz_05.txt  cn_plz_83.txt  cn_plz_83_130.txt  cn_pt_76.txt  cn_ptl_02.txt  cn_ptz_89.txt  cn_qn506.txt  cn_sdkfz_222_early.txt  cn_su_76m_1943.txt  cn_t_62.txt  cn_type_59.txt  cn_type_59d.txt  cn_type_69.txt  cn_type_69_2a.txt  cn_type_69_2g.txt  cn_vt_4.txt  cn_vt_5.txt  cn_wma_301.txt  cn_wz_1001.txt  cn_wz_141.txt  cn_wz_305.txt  cn_zbd_04a.txt  cn_zsd63_pg87.txt  (+414 more)
(+190 files in other folders)
