[workspace]
members  = ["cli", "core"]
resolver = "3"

[workspace.package]
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/tsvl/WT-FCSGenerator"
rust-version = "1.92.0"
version      = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
