[package]
description            = "Core library for FCS generation — datamine parsing, ballistics, and sight rendering"
edition.workspace      = true
license.workspace      = true
name                   = "fcsgen-core"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
dashmap    = "6"
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror  = "2"
